--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
-@import "tailwindcss";
+@import 'tailwindcss';
 
 body {
-  @apply font-[Oswald];
+    @apply bg-[#b1adaa] font-[Oswald];
+}
+
+button {
+    @apply cursor-pointer;
 }
